sumo/tests/sumo/pedestrian_model/nonInteracting/errors/disconnected_trip/errors.sumo
Warning: No connection between edge 'SC_fwd_connector' and edge 'CW_bwd_connector' found.
Error: No connection found between 'SC' and 'CW' for person 'p0'.
Quitting (on error).
